plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-docker-compose'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// oauth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// SpringDoc OpenAPI UI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	//서브모듈의 저장된 비밀정보를 로드하기 위한 의존성
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'

	//Json Parser
	implementation 'com.google.code.gson:gson'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//AWS S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'

	//Database
	implementation 'com.mysql:mysql-connector-j:9.0.0'
	runtimeOnly 'com.h2database:h2:2.2.224'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation('org.testcontainers:testcontainers:1.20.0') {
		exclude group: 'junit'
	}
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.16.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.springframework.security:spring-security-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

}

tasks.named('test') {
	useJUnitPlatform()
}




